2012-05-15  Richard Guenther  <rguenther@suse.de>

	* cgraphunit.c (thunk_adjust): Use make_rename_temp.
	(assemble_thunk): Likewise.  Manually rename and register
	function arguments.

2012-05-15  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53355
	* tree-vrp.c (extract_range_from_binary_expr_1): Handle LSHIFT_EXPRs
	by constants.

2012-05-15  Tristan Gingold  <gingold@adacore.com>

      * tree-ssa-strlen.c (get_string_length): Convert lhs if needed.

2012-05-15  Richard Guenther  <rguenther@suse.de>

	* gimple.c (gimple_set_modified): Move ...
	* gimple.h (gimple_set_modified): ... here.

2012-05-15  Tristan Gingold  <gingold@adacore.com>

	* ira-color.c (move_spill_restore): Add a guard.

2012-05-15  Tristan Gingold  <gingold@adacore.com>

	* config/ia64/ia64.c (ia64_emit_probe_stack_range): Adjust calls to
	plus_constant.

2012-05-15  Eric Botcazou  <ebotcazou@adacore.com>

	* gimplify.c (gimplify_init_constructor): Do a block move for very
	small objects as well.

2012-05-15  Bernd Schmidt  <bernds@codesourcery.com>

	* ira.c (find_moveable_pseudos): Skip registers whose
	DF_REG_EQ_USE_COUNT is nonzero.

2012-05-15  Kenneth Zadeck  <zadeck@naturalbridge.com>

	* doc/md.texi (fma): Define to only be applicable for single
	rounding.

2012-05-14  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46098
	* config/i386/i386.c (ix86_expand_special_args_builtin): Always
	generate target register for "load" class builtins.

	Revert:
	2010-10-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46098
	* config/i386/sse.md (*avx_movu<ssemodesuffix><avxmodesuffix>):
	Rename from avx_movu<ssemodesuffix><avxmodesuffix>.
	(avx_movu<ssemodesuffix><avxmodesuffix>): New expander.
	(*<sse>_movu<ssemodesuffix>): Rename from <sse>_movu<ssemodesuffix>.
	(<sse>_movu<ssemodesuffix>): New expander.
	(*avx_movdqu<avxmodesuffix>): Rename from avx_movdqu<avxmodesuffix>.
	(avx_movdqu<avxmodesuffix>): New expander.
	(*sse2_movdqu): Rename from sse2_movdqu.